# HSBacktest

./: CMakeLists.txt
HSBacktest/: CMakeLists.txt  HSBacktest.cpp  HSBacktest.h
HSBacktest/ConfigLvevl/: configer.h
HSBacktest/Datalevel/: Global_data.cpp  Global_data.h  data_defs.h  stock_k_data.cpp  stock_k_data.h
HSBacktest/Datalevel/factor_calculate/: factorbase.cpp  factorbase.h
HSBacktest/Datalevel/factor_calculate/epratio/: ep_ratio.cpp  ep_ratio.h
HSBacktest/Datalevel/factor_calculate/logmcap/: log_mcap.cpp  log_mcap.h
HSBacktest/Datalevel/factor_calculate/momentnum20/: momentum_20.cpp  momentum_20.h
HSBacktest/Datalevel/factor_calculate/turnover20/: turnover_20.cpp  turnover_20.h
HSBacktest/Datalevel/factor_calculate/volatility20/: volatility_20.cpp  volatility_20.h
HSBacktest/Datalevel/read_csvdata/: read_csv.h
HSBacktest/MyLog/: Logger.cpp  Logger.h
